tests/util/snapshots/list__util__list_mutants_in_factorial.snap
---
source: tests/util/mod.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
src/bin/factorial.rs:2:5: replace main with ()
src/bin/factorial.rs:12:5: replace factorial -> u32 with 0
src/bin/factorial.rs:12:5: replace factorial -> u32 with 1
src/bin/factorial.rs:10:11: replace *= with += in factorial
src/bin/factorial.rs:10:11: replace *= with /= in factorial
