tests/util/snapshots/list__util__list_mutants_in_factorial_json.snap
---
source: tests/util/mod.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "file": "src/bin/factorial.rs",
    "function": {
      "function_name": "main",
      "return_type": "",
      "span": {
        "end": {
          "column": 2,
          "line": 5
        },
        "start": {
          "column": 1,
          "line": 1
        }
      }
    },
    "genre": "FnValue",
    "package": "cargo-mutants-testdata-factorial",
    "replacement": "()",
    "span": {
      "end": {
        "column": 6,
        "line": 4
      },
      "start": {
        "column": 5,
        "line": 2
      }
    }
  },
  {
    "file": "src/bin/factorial.rs",
    "function": {
      "function_name": "factorial",
      "return_type": "-> u32",
      "span": {
        "end": {
          "column": 2,
          "line": 13
        },
        "start": {
          "column": 1,
          "line": 7
        }
      }
    },
    "genre": "FnValue",
    "package": "cargo-mutants-testdata-factorial",
    "replacement": "0",
    "span": {
      "end": {
        "column": 6,
        "line": 12
      },
      "start": {
        "column": 5,
        "line": 12
      }
    }
  },
  {
    "file": "src/bin/factorial.rs",
    "function": {
      "function_name": "factorial",
      "return_type": "-> u32",
      "span": {
        "end": {
          "column": 2,
          "line": 13
        },
        "start": {
          "column": 1,
          "line": 7
        }
      }
    },
    "genre": "FnValue",
    "package": "cargo-mutants-testdata-factorial",
    "replacement": "1",
    "span": {
      "end": {
        "column": 6,
        "line": 12
      },
      "start": {
        "column": 5,
        "line": 12
      }
    }
  },
  {
    "file": "src/bin/factorial.rs",
    "function": {
      "function_name": "factorial",
      "return_type": "-> u32",
      "span": {
        "end": {
          "column": 2,
          "line": 13
        },
        "start": {
          "column": 1,
          "line": 7
        }
      }
    },
    "genre": "BinaryOperator",
    "package": "cargo-mutants-testdata-factorial",
    "replacement": "+=",
    "span": {
      "end": {
        "column": 13,
        "line": 10
      },
      "start": {
        "column": 11,
        "line": 10
      }
    }
  },
  {
    "file": "src/bin/factorial.rs",
    "function": {
      "function_name": "factorial",
      "return_type": "-> u32",
      "span": {
        "end": {
          "column": 2,
          "line": 13
        },
        "start": {
          "column": 1,
          "line": 7
        }
      }
    },
    "genre": "BinaryOperator",
    "package": "cargo-mutants-testdata-factorial",
    "replacement": "/=",
    "span": {
      "end": {
        "column": 13,
        "line": 10
      },
      "start": {
        "column": 11,
        "line": 10
      }
    }
  }
]
