tests/util/snapshots/list__util__list_mutants_well_tested_exclude_name_filter.snap
---
source: tests/util/mod.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
src/arc.rs:4:5: replace return_arc -> Arc<String> with Arc::new(String::new())
src/arc.rs:4:5: replace return_arc -> Arc<String> with Arc::new("xyzzy".into())
src/booleans.rs:2:5: replace and -> bool with true
src/booleans.rs:2:5: replace and -> bool with false
src/booleans.rs:2:7: replace && with || in and
src/booleans.rs:6:5: replace or -> bool with true
src/booleans.rs:6:5: replace or -> bool with false
src/booleans.rs:6:7: replace || with && in or
src/booleans.rs:10:5: replace xor -> bool with true
src/booleans.rs:10:5: replace xor -> bool with false
src/booleans.rs:10:7: replace ^ with | in xor
src/booleans.rs:10:7: replace ^ with & in xor
src/booleans.rs:14:5: replace not -> bool with true
src/booleans.rs:14:5: replace not -> bool with false
src/booleans.rs:14:5: delete ! in not
src/inside_mod.rs:4:13: replace outer::inner::name -> &'static str with ""
src/inside_mod.rs:4:13: replace outer::inner::name -> &'static str with "xyzzy"
src/methods.rs:17:9: replace Foo::double with ()
src/methods.rs:17:16: replace *= with += in Foo::double
src/methods.rs:17:16: replace *= with /= in Foo::double
src/methods.rs:23:9: replace <impl Display for Foo>::fmt -> fmt::Result with Ok(Default::default())
src/methods.rs:29:9: replace <impl Debug for &Foo>::fmt -> fmt::Result with Ok(Default::default())
src/nested_function.rs:5:5: replace has_nested -> u32 with 0
src/nested_function.rs:5:5: replace has_nested -> u32 with 1
src/nested_function.rs:3:9: replace has_nested::inner -> u32 with 0
src/nested_function.rs:3:9: replace has_nested::inner -> u32 with 1
src/nested_function.rs:5:13: replace * with + in has_nested
src/nested_function.rs:5:13: replace * with / in has_nested
src/numbers.rs:2:5: replace double_float -> f32 with 0.0
src/numbers.rs:2:5: replace double_float -> f32 with 1.0
src/numbers.rs:2:5: replace double_float -> f32 with -1.0
src/numbers.rs:2:9: replace * with + in double_float
src/numbers.rs:2:9: replace * with / in double_float
src/numbers.rs:6:5: replace is_double -> bool with true
src/numbers.rs:6:5: replace is_double -> bool with false
src/numbers.rs:6:7: replace == with != in is_double
src/numbers.rs:6:12: replace * with + in is_double
src/numbers.rs:6:12: replace * with / in is_double
src/numbers.rs:10:5: replace negate_i32 -> i32 with 0
src/numbers.rs:10:5: replace negate_i32 -> i32 with 1
src/numbers.rs:10:5: replace negate_i32 -> i32 with -1
src/numbers.rs:10:5: delete - in negate_i32
src/numbers.rs:14:5: replace negate_f32 -> f32 with 0.0
src/numbers.rs:14:5: replace negate_f32 -> f32 with 1.0
src/numbers.rs:14:5: replace negate_f32 -> f32 with -1.0
src/numbers.rs:14:5: delete - in negate_f32
src/numbers.rs:18:5: replace bitwise_not_i32 -> i32 with 0
src/numbers.rs:18:5: replace bitwise_not_i32 -> i32 with 1
src/numbers.rs:18:5: replace bitwise_not_i32 -> i32 with -1
src/numbers.rs:18:5: delete ! in bitwise_not_i32
src/numbers.rs:22:5: replace bitwise_not_u32 -> u32 with 0
src/numbers.rs:22:5: replace bitwise_not_u32 -> u32 with 1
src/numbers.rs:22:5: delete ! in bitwise_not_u32
src/result.rs:6:5: replace simple_result -> Result<&'static str, ()> with Ok("")
src/result.rs:6:5: replace simple_result -> Result<&'static str, ()> with Ok("xyzzy")
src/result.rs:11:9: replace error_if_negative -> Result<(), ()> with Ok(())
src/result.rs:10:10: replace < with == in error_if_negative
src/result.rs:10:10: replace < with > in error_if_negative
src/result.rs:18:5: replace result_with_no_apparent_type_args -> std::fmt::Result with Ok(Default::default())
src/sets.rs:7:5: replace make_a_set -> BTreeSet<String> with BTreeSet::new()
src/sets.rs:7:5: replace make_a_set -> BTreeSet<String> with BTreeSet::from_iter([String::new()])
src/sets.rs:7:5: replace make_a_set -> BTreeSet<String> with BTreeSet::from_iter(["xyzzy".into()])
src/slices.rs:9:5: replace pad -> &'a[Cow<'static, str>] with Vec::leak(Vec::new())
src/slices.rs:9:5: replace pad -> &'a[Cow<'static, str>] with Vec::leak(vec![Cow::Borrowed("")])
src/slices.rs:9:5: replace pad -> &'a[Cow<'static, str>] with Vec::leak(vec![Cow::Owned("".to_owned())])
src/slices.rs:9:5: replace pad -> &'a[Cow<'static, str>] with Vec::leak(vec![Cow::Borrowed("xyzzy")])
src/slices.rs:9:5: replace pad -> &'a[Cow<'static, str>] with Vec::leak(vec![Cow::Owned("xyzzy".to_owned())])
src/slices.rs:5:20: replace < with == in pad
src/slices.rs:5:20: replace < with > in pad
src/slices.rs:16:5: replace return_mut_slice -> &mut[usize] with Vec::leak(Vec::new())
src/slices.rs:16:5: replace return_mut_slice -> &mut[usize] with Vec::leak(vec![0])
src/slices.rs:16:5: replace return_mut_slice -> &mut[usize] with Vec::leak(vec![1])
src/slices.rs:14:12: replace *= with += in return_mut_slice
src/slices.rs:14:12: replace *= with /= in return_mut_slice
src/static_item.rs:1:33: replace == with !=
src/static_item.rs:1:39: replace + with -
src/static_item.rs:1:39: replace + with *
src/struct_with_lifetime.rs:15:9: replace Lex<'buf>::buf_len -> usize with 0
src/struct_with_lifetime.rs:15:9: replace Lex<'buf>::buf_len -> usize with 1
src/traits.rs:5:9: replace Something::is_three -> bool with true
src/traits.rs:5:9: replace Something::is_three -> bool with false
src/traits.rs:5:11: replace == with != in Something::is_three
