tests/util/snapshots/list__util__list_mutants_with_diffs_in_factorial.snap
---
source: tests/util/mod.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
src/bin/factorial.rs:2:5: replace main with ()
--- src/bin/factorial.rs
+++ replace main with ()
@@ -1,12 +1,10 @@
 fn main() {
-    for i in 1..=6 {
-        println!("{}! = {}", i, factorial(i));
-    }
+    () /* ~ changed by cargo-mutants ~ */
 }
 
 fn factorial(n: u32) -> u32 {
     let mut a = 1;
     for i in 2..=n {
         a *= i;
     }
     a

src/bin/factorial.rs:12:5: replace factorial -> u32 with 0
--- src/bin/factorial.rs
+++ replace factorial -> u32 with 0
@@ -4,16 +4,16 @@
     }
 }
 
 fn factorial(n: u32) -> u32 {
     let mut a = 1;
     for i in 2..=n {
         a *= i;
     }
-    a
+    0 /* ~ changed by cargo-mutants ~ */
 }
 
 #[test]
 fn test_factorial() {
     println!("factorial({}) = {}", 6, factorial(6)); // This line is here so we can see it in --nocapture
     assert_eq!(factorial(6), 720);
 }

src/bin/factorial.rs:12:5: replace factorial -> u32 with 1
--- src/bin/factorial.rs
+++ replace factorial -> u32 with 1
@@ -4,16 +4,16 @@
     }
 }
 
 fn factorial(n: u32) -> u32 {
     let mut a = 1;
     for i in 2..=n {
         a *= i;
     }
-    a
+    1 /* ~ changed by cargo-mutants ~ */
 }
 
 #[test]
 fn test_factorial() {
     println!("factorial({}) = {}", 6, factorial(6)); // This line is here so we can see it in --nocapture
     assert_eq!(factorial(6), 720);
 }

src/bin/factorial.rs:10:11: replace *= with += in factorial
--- src/bin/factorial.rs
+++ replace *= with += in factorial
@@ -2,17 +2,17 @@
     for i in 1..=6 {
         println!("{}! = {}", i, factorial(i));
     }
 }
 
 fn factorial(n: u32) -> u32 {
     let mut a = 1;
     for i in 2..=n {
-        a *= i;
+        a += /* ~ changed by cargo-mutants ~ */ i;
     }
     a
 }
 
 #[test]
 fn test_factorial() {
     println!("factorial({}) = {}", 6, factorial(6)); // This line is here so we can see it in --nocapture
     assert_eq!(factorial(6), 720);

src/bin/factorial.rs:10:11: replace *= with /= in factorial
--- src/bin/factorial.rs
+++ replace *= with /= in factorial
@@ -2,17 +2,17 @@
     for i in 1..=6 {
         println!("{}! = {}", i, factorial(i));
     }
 }
 
 fn factorial(n: u32) -> u32 {
     let mut a = 1;
     for i in 2..=n {
-        a *= i;
+        a /= /* ~ changed by cargo-mutants ~ */ i;
     }
     a
 }
 
 #[test]
 fn test_factorial() {
     println!("factorial({}) = {}", 6, factorial(6)); // This line is here so we can see it in --nocapture
     assert_eq!(factorial(6), 720);
